--- a/css/register.css
+++ b/css/register.css
@@ -1,40 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-    font-family: 'Poppins' sans-serif;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-    background: hsl(0, 100%, 74%);
+    font-family: "Epilogue", serif;
+    font-size: 18px;
+    background-color: hsl(0, 0%, 98%);
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+}
+
+.navigation-container {
+    margin: 1.25em 4.6em 0em 4.6em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.brand-el {
+    font-size: 1.5rem;
+    color: hsl(0, 0%, 8%);
+    font-weight: 800;
 }
 
 .main-container {
-    text-align: center;
-    padding: 1em;
+    margin: 3em 7.8em 0em 6.5em;
+    /* text-align: center; */
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
 }
 
 .text-container {
-    text-align: center;
-    color: white;
-    padding: 3em 0.5em 1em 0.5em;
+    margin: 5em 2em 0 0;
+    /* text-align: center; */
+    color: hsl(0, 0%, 8%);
+    /* padding: 3em 0.5em 1em 0.5em; */
 }
 
-.heading h1{
-    font-weight: 700;
-    font-family: 'Poppins';
+.heading p{
+    font-size: 2rem;
+    font-weight: 800;
+    font-family: 'Epilogue';
 }
 
 .paragraph {
-    font-family: 'Poppins';
+    font-family: 'Epilogue';
     font-weight: 500;
     line-height: 1.6;
 }
 
 .form-cont {
-    margin-top: 2em;
-    background-color: white;
+    margin-left: 2em;
+    text-align: center;
+    /* margin-top: 2em; */
+    background-color: #ffe6bc;
     border: white;
     border-radius: .5em;
-    box-shadow: 0 7px 2px hsl(0, 52%, 50%);
+    box-shadow: 0 7px 4px hsl(0, 52%, 50%);
+    /* box-shadow: 0 7px 2px #f7f1ea; */
 }
 
 input {
@@ -70,7 +91,7 @@ input {
 #button {
     padding: 1.5em 1em;
     width: 85%;
-    border: 1px hsl(154, 59%, 51%) solid;
+    border: 1px #113e21 solid;
     border-radius: .5em;
     background-color: hsl(154, 59%, 51%);
     color: white;
@@ -86,44 +107,4 @@ input {
 
 .red-services {
     color: hsl(0, 100%, 74%);
-}
-
-@media (min-width: 930px) {
-    body {
-        background: hsl(0, 100%, 74%);
-
-    }
-
-    .main {
-        padding: 4em;
-        box-sizing: border-box;
-        width: 100%;
-        height: 100%;
-    }
-
-    .main-container {
-        display: inline-grid;
-        grid-template-columns: repeat(2, 50%);
-    }
-
-    .text-container {
-        margin-top: 7em;
-        text-align: left;
-        align-items: center;
-    }
-    
-    .heading h1 {
-        padding-right: 4em;
-        font-weight: 800;
-    }
-
-    .paragraph {
-        padding-right: 3em;
-        font-weight: 500;
-        font-size: large;
-    }
-
-    .error {
-        padding-right: 2.5em;
-    }
 }
