--- a/css/user.css
+++ b/css/user.css
@@ -56,9 +56,10 @@ body {
 .input-el {
     border: none;
     border-radius: 2em;
-    padding: 1.5em 2em;
+    padding: 1.5em 3em;
     width: 45%;
     box-shadow: 2px 1px 3px 2px hsl(0, 3%, 66%);
+    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
 }
 
 .input-el:focus {
@@ -69,6 +70,30 @@ body {
     color: transparent;
 }
 
+.suggesstions-wrap .suggesstions li {
+    list-style: none;
+    border-radius: 3px;
+    padding: 8px 25px;
+    transition: all .5s linear;
+}
+
+.suggesstions-wrap {
+    display: none;
+}
+
+.suggesstions-wrap.show {
+    margin-top: .5em;
+    width: 42%;
+    display: inline-block;
+    border: none;
+    border-radius: 1em;
+    box-shadow: 2px 1px 3px 2px hsl(0, 3%, 66%);
+}
+
+.suggesstions-wrap .suggesstions li:hover {
+    background: hsl(0, 3%, 66%);
+}
+ 
 .portfolio-container {
     justify-content: center;
     text-align: center;
